WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94288
RenderBox::computeLogicalClientHeight is incorrectly named
https://bugs.webkit.org/show_bug.cgi?id=94288
Summary
RenderBox::computeLogicalClientHeight is incorrectly named
Ojan Vafai
Reported
2012-08-16 19:08:46 PDT
clientHeight should include padding but exclude scrollbars (and RenderBox::clientHeight does!). RenderBox::computeLogicalClientHeight returns the box-sizing adjusted content height (excluding both padding and scrollbars). It's especially confusing because computeContentLogicalHeightUsing returns the content height not adjusted for box-sizing and including the scrollbar and computeLogicalHeightUsing returns the border-box size (including scrollbar obviously). Can't think of a better name at the moment, but computeLogicalClientHeight is definitely wrong.
Attachments
Patch
(7.84 KB, patch)
2012-09-12 14:43 PDT
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2012-09-12 14:43:43 PDT
Created
attachment 163700
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-12 15:29:19 PDT
Comment on
attachment 163700
[details]
Patch Clearing flags on attachment: 163700 Committed
r128371
: <
http://trac.webkit.org/changeset/128371
>
WebKit Review Bot
Comment 3
2012-09-12 15:29:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug