RenderBox::computeLogicalClientHeight is incorrectly named https://bugs.webkit.org/show_bug.cgi?id=94288

Reviewed by Tony Chang.

Just renamed a couple methods to make it more clear what they return.
No behavior changes.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeightUsing):
(WebCore::RenderBox::computeContentLogicalHeight):
(WebCore::RenderBox::computeContentAndScrollbarLogicalHeightUsing):
(WebCore::RenderBox::availableLogicalHeightUsing):
* rendering/RenderBox.h:
(RenderBox):
* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::mainAxisContentExtent):
(WebCore::RenderFlexibleBox::computeMainAxisExtentForChild):
(WebCore::RenderFlexibleBox::computeAvailableFreeSpace):
(WebCore::RenderFlexibleBox::lineBreakLength):


Canonical link: https://commits.webkit.org/114457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128371 268f45cc-cd09-0410-ab3c-d52691b4dbfc